

1.50 (2008/xx/yy)
<http://trac.transmissionbt.com/query?milestone=1.50&group=component&groupdesc=1&order=severity>
- All Platforms
   + Support BitTorrent Enhancement Proposal #6 "Fast Extension"
   + Support BitTorrent Enhancement Proposal #21 "Extension for Partial Seeds"
- Mac
   + Groups (moved to preferences) can have a default location when adding transfers
- GTK+
   + Minor display improvements and HIG compliance


1.41 (2008/xx/yy)
<http://trac.transmissionbt.com/query?milestone=1.41&group=component&groupdesc=1&order=severity>
- All Platforms
   + Fix 1.40 "jumpy upload speed" bug
   + Fix 1.40 "Got HTTP Status Code: 0" error message
   + Parse peer blocklists from bluetack even if they contain Windows newlines
   + Fix handshake peer_id error
   + Fix 1.40 "lazy bitfield" error
   + More accurate bandwidth measurement
   + Fix autoconf/automake build warnings
- GTK+
   + In the Details dialog's peer tabs, rows were sometimes duplicated
   + Three new translations: Afrikaans, Asturian, Bosnian
   + Sixteen updated translations
- Daemon
   + Minor bugfixes
   + Windows portability


1.40 (2008/11/09)
<http://trac.transmissionbt.com/query?milestone=1.40&group=component&groupdesc=1&order=severity>
- All Platforms
   + Tracker communication uses fewer resources
   + More accurate bandwidth limits
   + Reduce disk fragmentation by preallocating files
   + Stability, security, and performance improvements to the RPC/Web UI server
   + Support compression when serving Web UI and RPC responses
   + Simplify the RPC whitelist
   + Fix bug that prevented handshakes with encrypted BitComet peers
   + Fix 1.3x bug that could re-download some data unnecessarily
   + Lazy bitfields
- Mac
   + Option to automatically update the blocklist weekly
   + In the file inspector tab, show progress and size for folders
   + Scrollbars correctly appear when the main window auto-resizes
   + Sparkle updated to 1.5b6
- GTK+
   + Option to automatically update the blocklist weekly